Lab2/Task 2/CloudFormation.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Using Cloudformation to manage and deploy the AWS Infrastructure

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    AllowedPattern: '[A-Za-z0-9-]+'
  GitHubOAuthTokenSecretName:
    Type: String
  GitHubRepositoryOwner:
    Description: Enter GitHub username of the repository owner
    Type: String
  GitHubRepository:
    Description: Enter the repository name that should be monitored for changes
    Type: String
  VpcCIDR: 
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the Availability Zone
    Type: String
    Default: 10.0.0.0/24
  PrivateSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the Availability Zone
    Type: String
    Default: 10.0.1.0/24

Resources:
#####Create VPC#####
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

#####Public Subnet#####
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        Fn::Select: 
        - 0
        - Fn::GetAZs: ""
      VpcId: !Ref MyVPC
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pub-SubNet"]]
          
  

#####Private Subnet#####
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        Fn::Select: 
        - 0
        - Fn::GetAZs: ""
      VpcId: !Ref MyVPC
      CidrBlock: !Ref PrivateSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pri-SubNet"]]

#####Create Internet Gateway######
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: MyVPC 
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-IGW"]]

#####Attach Internet Gateway to VPC#####
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

#####Create NAT Gateway#####
  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-NGW-EIP"]]                    
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet
      AllocationId: !GetAtt ElasticIP.AllocationId
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-NGW"]]

#####Create Public Route Table#####
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pub-RTB"]]
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

#####Create Private Route Table#####
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pri-RTB"]]
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

#####Security Group for EC2 Public Instance#####
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access to Public EC2
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:  123.250.165.100/32 # User's IP
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pub-SecGr"]]

#####Security Group for EC2 Private Instance#####
  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from Public EC2
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pri-SecGr"]]

#####Create EC2 for Public Instance#####
  myEC2InstancePublic:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PublicSubnet
      InstanceType: t2.micro #Change another type if you want
      SecurityGroupIds:
        - !Ref PublicSecurityGroup
      ImageId: ami-0866a3c8686eaeeba #Insert your ID
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pub-EC2"]]

#####Create EC2 for Private Instance#####
  myEC2InstancePrivate:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PrivateSubnet
      InstanceType: t2.micro #Insert your type
      SecurityGroupIds:
        - !Ref PrivateSecurityGroup
      ImageId: ami-0866a3c8686eaeeba #Insert your ID
      Tags: 
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-Pri-EC2"]]

#####S3Bucket#####
  ArtifactS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Join
        - '-'
        - - codebuild
          - !Ref ApplicationName

#####CodeBuild Role#####
  CodeBuildRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      RoleName: !Sub '${ApplicationName}-CodeBuild-Pipeline'
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: codebuild.amazonaws.com
#####CodeBuild IAM#####
  CodeBuildIAMPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: !Sub '${ApplicationName}-CodeBuildPolicy-Pipeline'
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Resource:
              - '*'
            Action:
              - 'logs:CreateLogGroup'
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'

          - Effect: Allow
            Resource:
              - !Join
                - ''
                - - 'arn:aws:s3:::'
                  - !Ref ArtifactS3Bucket
                  - /*
            Action:
              - 's3:GetObject'
              - 's3:GetObjectVersion'
              - 's3:PutObject'
          - Effect: Allow
            Resource:
              - !Sub >-
                arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:github-token-*
            Action:
              - 'secretsmanager:GetSecretValue'
          - Effect: Allow
            Resource:
              - '*'
            Action:
              - 'cloudformation:*'
          - Effect: Allow
            Resource:
              - '*'
            Action:
              - 'iam:*'
              - 'vpc:*'
              - 'kms:*'
              - 's3:*'
              - 'codebuild:*'
              - 'codepipeline:*'
              - 'events:*'
              - 'ec2:*'
      Roles:
        - !Ref CodeBuildRole
#####CodeBuild Project#####
  Codebuild:
    Type: AWS::Codebuild::Project
    Properties:
      Name: !Sub '${ApplicationName}'
      Description: !Sub 'Build project of ${ApplicationName} '
      Source:
        BuildSpec: 'build-config/build-spec.yml'
        GitCloneDepth: 1
        GitSubmodulesConfig:
          FetchSubmodules: false
        InsecureSsl: false
        Location: !Sub https://github.com/${GitHubRepositoryOwner}/${GitHubRepository}
        ReportBuildStatus: false
        Type: 'GITHUB'
      SourceVersion: !Sub refs/heads/master
      Artifacts:
        Type: 'NO_ARTIFACTS'
      Cache:
        Type: 'NO_CACHE'
      ServiceRole: !Ref CodeBuildRole
      Environment:
        ComputeType: BUILD_GENERAL1_SMALL
        PrivilegedMode: false
        Image: 'aws/codebuild/standard:5.0'
        Type: LINUX_CONTAINER
        EnvironmentVariables:
          - Name: STACK
            Type: 'PLAINTEXT'
            Value: none
          - Name: STACKTYPE
            Type: 'PLAINTEXT'
            Value: pipeline
